fix case in tootltips

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -153,7 +153,7 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="Setup settings"
+        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="setup settings"
                 matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
                 <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
