--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -207,8 +207,8 @@ bottom: -2; ">
                         <div style="display: flex;flex-direction: column;gap: 1px;">
                             <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
                             <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
-                            <mat-radio-button value="radio">Radio Butons</mat-radio-button>
-                            <mat-radio-button value="dinamycRadio">Dynamic Radio Butons</mat-radio-button>
+                            <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
+                            <mat-radio-button value="dinamycRadio">Dynamic Radio Buttons</mat-radio-button>
                         </div>
                     </mat-radio-group>
                 </div>
