--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -3,7 +3,7 @@
 
 
         <div class="desktop">
-            <button *ngIf="true" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="See tutorial"
+            <button *ngIf="true" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="see tutorial"
                 matTooltipPosition="above" style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
                 <mat-icon class="full-icon" style="font-size: 36px;">contact_support</mat-icon>
             </button>
@@ -126,7 +126,7 @@
                     <!--IMAGE RANK DRAG 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽-->
                     <div *ngIf="bmxItem.componentType === 'image-rank-drag'" class="paragraph">
                         <button *ngIf="!showModalVideo" (click)="seeTutorial()" class="see-tutorial-mobil"
-                            mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                            mat-icon-button matTooltip="see tutorial" matTooltipPosition="above"
                             style="position: fixed;color: grey;z-index: 9999999999;outline: none;">
                             <mat-icon class="full-icon" style="font-size: 36px;">contact_support
                             </mat-icon>
@@ -161,7 +161,7 @@
                     <!-- IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀-->
                     <div *ngIf="bmxItem.componentType === 'image-rate-scale'" class="paragraph">
                         <button *ngIf="!showModalVideo" (click)="seeTutorial()" class="see-tutorial-mobil"
-                            mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                            mat-icon-button matTooltip="see tutorial" matTooltipPosition="above"
                             style="position: fixed;color: grey;z-index: 9999999999;outline: none;">
                             <mat-icon class="full-icon" style="font-size: 36px;">contact_support
                             </mat-icon>
@@ -197,7 +197,7 @@
                     <!-- TINDER  🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥-->
                     <div *ngIf="bmxItem.componentType === 'tinder'" class="paragraph">
                         <button *ngIf="!showModalVideo" (click)="seeTutorial()" class="see-tutorial-mobil"
-                            mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                            mat-icon-button matTooltip="see tutorial" matTooltipPosition="above"
                             style="position: fixed;color: grey;z-index: 9999999999;outline: none;">
                             <mat-icon class="full-icon" style="font-size: 36px;">contact_support
                             </mat-icon>
