--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -168,14 +168,14 @@
         </button>
 
         <button (click)="openWindow(i, false)" class="add-column"
-            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column"
             matTooltip="uploadImages" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-        <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+        <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
         *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
     </button>
@@ -295,7 +295,7 @@
                     (selectionChange)="criteriaSelection(newselectedCriteria)">
                   <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                     {{criteriaItem.name}}
-                    <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
+                    <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
                         style="cursor: pointer; font-size: 15px; color: #ee7f25;" (dblclick)="deleteCriteria(c);">
                         cancel</mat-icon>
                   </mat-option>
@@ -497,7 +497,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                                 (selectionChange)="criteriaSelection(newselectedCriteria)">
                                 <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                                     {{criteriaItem.name}}
-                                    <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
+                                    <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
                                         style="cursor: pointer; font-size: 15px; color: #ee7f25;"
                                         (dblclick)="deleteCriteria(c);">
                                         cancel</mat-icon>
