--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -149,11 +149,11 @@
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
         <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera(); verifyCritera()"
-            class="add-column" matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex"
+            class="add-column" matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex"
             mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+        <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
         *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
     </button>
