--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -31,12 +31,12 @@
                     </button>
                 </div>
                 <app-logo-header [bmxItem]="bmxItem" [isBrandMatrixSurvey]="isBrandMatrixSurvey" [i]="i" (logoChanged)="logoChanged($event)" (resizeWidthLogo)="resizeWidthLogo($event)"
-                    [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview">
+                    [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
                 </app-logo-header>
             </div>
             <!--😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 END BMX HEADER  -->
 
-            
+
             <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
             <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph">
                 <div class="emoji-handle">.</div>
@@ -46,7 +46,7 @@
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
-                </div>                    
+                </div>
                 <app-text-paragraph [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                     [bmxClientPageOverview]="bmxClientPageOverview" style="margin-top: 25px"></app-text-paragraph>
             </div>
@@ -62,7 +62,7 @@
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
-                </div>                
+                </div>
                 <app-rating-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                     [bmxClientPageOverview]="bmxClientPageOverview">
                 </app-rating-scale>
@@ -170,7 +170,7 @@
         <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
         <div class="page-buttons">
             <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
-               
+
                 <button (click)="changePage('previous')" mat-icon-button>
                     <mat-icon class="full-icon">chevron_left</mat-icon>
                 </button>
@@ -185,7 +185,7 @@
                 </div>
 
                 <button (click)="changePage('next')" mat-icon-button>
-                   Next 
+                   Next
                 </button>
                 <button (click)="changePage('next')" mat-icon-button>
                     <mat-icon class="full-icon">chevron_right</mat-icon>
@@ -207,7 +207,7 @@
         </button>
 
         <div [ngClass]="showMenuCreator?'menuCreatorBmx':'hideMenuCreatorBmx'">
-            
+
             <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="header"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">account_circle</mat-icon>
@@ -250,8 +250,8 @@
             </button>
             <br>
         </div>
-        <div style="display: flex;flex-direction: column;" >  
-            <button *ngIf="!false" (click)="createPage()" matTooltip="Create New Page" matTooltipPosition="right"
+        <div style="display: flex;flex-direction: column;" >
+            <button *ngIf="!false" (click)="createPage()" matTooltip="create New Page" matTooltipPosition="right"
                 mat-icon-button aria-label="aria">
                 <mat-icon class="full-icon-secondary">post_add</mat-icon>
             </button>
@@ -268,9 +268,9 @@
                     </mat-list>
                 </div>
             </button>
-            
-            
-             
+
+
+
             <button *ngIf="true" (dblclick)="resetTemplate()" mat-icon-button
                 matTooltip="double click to reset template" matTooltipPosition="right">
                 <mat-icon class="full-icon-secondary">delete_sweep
@@ -317,7 +317,7 @@
             <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
-   
+
     <div *ngIf="templateName.length > 3"
         style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
         <button (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
@@ -350,13 +350,13 @@
             style="color: white;background-color: #8a2a5a ">
             load
         </button>
-    
+
         <p *ngIf="isSaveOrUpdate">or</p>
         <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
             style="color: white;background-color: #2a3f8a">
             update
         </button>
-        
+
         <p *ngIf="isSaveOrUpdate">or</p>
         <button *ngIf="isSaveOrUpdate" (dblclick)="deleteTemplate(templateName)"
             matTooltip="double click to delete template" matTooltipPosition="below" mat-raised-button
